# Sales-report

./: .gitignore  README.md  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0001_squashed_0004_alter_purchase_product.py
my_api/: urls.py  utils.py  views.py
sales_report/: settings.py  urls.py
