[tool.poetry]
name = "sales-report-project"
version = "0.1.0"
description = ""
authors = ["Pavel Demeshkevich <dem-pasha@lenta.ru>"]
readme = "README.md"
packages = [{include = "sales_report_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^3.8.1"
asyncio = "^3.4.3"
django-async-orm = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
